@@ -45,7 +45,6 @@ SET(avogadro_TS
 	${CMAKE_SOURCE_DIR}/i18n/avogadro_de.ts
 	${CMAKE_SOURCE_DIR}/i18n/avogadro_fr.ts
 	${CMAKE_SOURCE_DIR}/i18n/avogadro_en_GB.ts
-
 )
 QT4_WRAP_TS(avogadro_QM ${avogadro_TS})
 
@@ -70,10 +69,17 @@ IF( APPLE )
   SET( MACOSX_BUNDLE_GUI_IDENTIFIER "net.sourceforge" )
   SET( MACOSX_BUNDLE_BUNDLE_NAME "Avogadro" )
 
-  # Need to copy the icon files
-  EXEC_PROGRAM( "mkdir -p   ${CMAKE_CURRENT_BINARY_DIR}/Avogadro.app/Contents/Resources")
-  EXEC_PROGRAM( "cp ${avogadro_SOURCE_DIR}/src/mac/avogadro.icns ${CMAKE_CURRENT_BINARY_DIR}/Avogadro.app/Contents/Resources")
-  EXEC_PROGRAM( "cp ${avogadro_SOURCE_DIR}/src/mac/AvogadroDocument.icns ${CMAKE_CURRENT_BINARY_DIR}/Avogadro.app/Contents/Resources")
+  # Need to copy the icon files and other resources
+  SET( MACOSX_BUILD_CONTENTS_DIR ${CMAKE_CURRENT_BINARY_DIR}/Avogadro.app/Contents/Resources )
+	SET( MACOSX_SRC_DIR ${avogadro_SOURCE_DIR}/src/mac )
+  EXEC_PROGRAM( "mkdir -p   ${MACOSX_BUILD_CONTENTS_DIR}" )
+  EXEC_PROGRAM( "cp ${MACOSX_SRC_DIR}/avogadro.icns ${MACOSX_BUILD_CONTENTS_DIR}" )
+  EXEC_PROGRAM( "cp ${MACOSX_SRC_DIR}/AvogadroDocument.icns ${MACOSX_BUILD_CONTENTS_DIR" )
+  SET( TRANSLATIONS en fr de en_GB )
+	FOREACH(lang ${TRANSLATIONS})
+	  EXEC_PROGRAM("mkdir ${MACOSX_BUILD_CONTENTS_DIR}/${lang}.lproj")
+		EXEC_PROGRAM("sed -e s/LANG/${lang}/ <${MACOSX_SRC_DIR}/locversion.plist.in | sed -e s/VERSION/${VERSION}/ >${MACOSX_BUILD_CONTENTS_DIR}/${lang}.lproj/locversion.plist;")
+	ENDFOREACH(lang ${TRANSLATIONS})
 
   # Overload the Info.plist default
   SET( CMAKE_MODULE_PATH ${avogadro_SOURCE_DIR}/src/mac ${CMAKE_MODULE_PATH} )
