@@ -1,0 +1,14 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>LprojCompatibleVersion</key>
+	<string>VERSION</string>
+	<key>LprojLocale</key>
+	<string>LANG</string>
+	<key>LprojRevisionLevel</key>
+	<string>1</string>
+	<key>LprojVersion</key>
+	<string>VERSION</string>
+</dict>
+</plist>
